kube/demo/nginx-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-service
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: nginx-demo
  ports:
    - name: http
      port: 80
      targetPort: 80
